# google-collab-codex-connector

./: .gitignore  README.md  pyproject.toml
colab_codex_adapter/: __init__.py  bridge.py  server.py  session.py  tools.py
tests/: test_server.py  test_tools.py
