[project]
name = "google-collab-codex-con"
version = "0.1.0"
description = "Codex-compatible static MCP adapter for Google Colab MCP session proxy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.5",
    "fastmcp==2.14.5",
    "mcp>=1.20.0",
    "pydantic>=2.12.3,<3.0.0",
    "websockets>=15.0.1",
]

[project.scripts]
colab-codex-adapter = "colab_codex_adapter.server:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["colab_codex_adapter*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
